# the-distribution-will-manifest

./: .env.example  .gitignore  LICENSE  README.md  blockhash_cache.py  bot_config.py  config.py  config.yaml  feature_accum.py  grpc_capture.py  grpc_firehose.py  jito_broker.py  jito_exec.py  listener_grpc_bot.py  model_serve.py  paper_book.py  position_store.py  pump_fun_ix.py  pumpfun_bot.py  pumpfun_create_parse.py  pumpfun_parse.py  pyproject.toml  requirements.txt  rich_entry_features.py  shadow_harness.py
artifacts/: README.md
docs/: LIVE_SESSION_2026-06-12_CONCLUSION.md  README.md
exit_policies/: __init__.py  b_frontload.py  base.py  h_time_spaced.py  hybrid_trail.py  k_combined.py  level_tp.py  lsm_continuation.py  rl_layered.py
grpc_stubs/: geyser_pb2.py  geyser_pb2_grpc.py  solana_storage_pb2_grpc.py
pumpbot/: __init__.py  _lazy.py  _paths.py  cli.py  execution.py  exits.py  features.py  harness.py  ingest.py  models.py  shred.py
research/: README.md  __init__.py
scripts/: archive_sync.sh  pumpfun_ctl.sh  sync_to_storagebox.sh
shred_bot/: inspect_types.py  inspect_unknowns.py  intent_extractor.py  intent_recorder.py  intent_ring.py  raw_shred_firehose.py  shred_window.py  storagebox_shipper.py
systemd/: pumpfun-ata-sweep.service  pumpfun-ata-sweep.timer  pumpfun-auto-policy.service  pumpfun-auto-policy.timer  pumpfun-auto-retrain.service  pumpfun-auto-retrain.timer  pumpfun-bot.service  pumpfun-continuation-watchdog.service  pumpfun-drift-monitor.service  pumpfun-drift-monitor.timer  pumpfun-grpc-capture.service  pumpfun-grpc-firehose.service  (+4 more)
(+197 files in other folders)
